// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should validate that the password exists 1`] = `
Object {
  "password": "Required",
}
`;

exports[`should validate that the password has a minimum length 1`] = `
Object {
  "password": "Password must be at least 8 characters.",
}
`;

exports[`should validate that the password has a number 1`] = `
Object {
  "password": "Password must contain a number.",
}
`;

exports[`should validate that the password has a special character 1`] = `
Object {
  "password": "Password must contain a special character.",
}
`;

exports[`should validate that the password has lowercase characters 1`] = `
Object {
  "password": "Password must contain an lowercase character.",
}
`;

exports[`should validate that the password has uppercase characters 1`] = `
Object {
  "password": "Password must contain an uppercase character.",
}
`;
